--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-hello world
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>
+
+        </title>
+    </head>
+    <body bgcolor="black">
+    </body>
+</html>
