--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
         </title>
     </head>
     <body bgcolor="black">
+        <div class="commandline">
+            <form>
+                <span style="color:white">>> :</span> <span style="background-color: black"><input type="text"/></span>
+            </form>
+        </div>
     </body>
 </html>
