--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <body bgcolor="black">
         <div class="commandline">
             <form>
-                <span style="color:white">>> :</span> <span style="background-color: black"><input type="text"/></span>
+                <span style="color:white">>> :</span> 
+                <span style="background-color: black"><input type="text"/></span>
+
+                
             </form>
         </div>
     </body>
